k8s/ingress/ingress-minimal-sample.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /testpath
        pathType: Prefix
        backend:
          service:
            name: test
            port:
              number: 80
# https://kubernetes.io/docs/concepts/services-networking/ingress/    

# kubectl describe ingress minimal-ingress
